--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     </style>
   </head>
   <body>
-    <iframe data-tally-src="https://tally.so/r/nGdM8k?transparentBackground=1" frameborder="0" marginheight="0" marginwidth="0" title="Envie Seus Detalhes!"></iframe>
+    <iframe "Envie Seus Detalhes!"></iframe>
   </body>
 </html>
